(1) removed classes that have little value and i'm currently unwilling to maintain or reuse, (2) refactored the dependency to google guava and apache, so they could be removed as dependencies, (3) opted on testing NEAT parallelism by lowering contention while calculating fitness